# kaldi-xvector-cmake-os

./: CMakeLists.txt  README.md  ggg
